Finally, the system is now starting to work properly.  The binding constraints helped a lot.  However, there remain lots of bugs in dealing with the complex examples of wildcard instantation.
git-svn-id: svn+ssh://barretts.ecs.vuw.ac.nz/vol/projects/elvis-svn/jkit/src@7119 95d365e6-2d05-0410-86de-9ddc6db2c6c8